# haskshell-checker

./: README.md  haskshell-checker.cabal  project-cis5520.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/: Checker.hs  Matcher.hs  Parsing.hs  PrettyPrint.hs  QuickCheck.hs  ShellParsing.hs  ShellSyntax.hs  State.hs  Suggestions copy.hs  Suggestions.hs  TempParsing.hs
test/: CheckerHUnitTests.hs  QuickCheck.hs  Spec.hs  conditional.sh  conditional.txt  sample-1.txt  sample-2.txt  sample-3.txt  test-2.txt
